--- a/doclimb-app/index.html
+++ b/doclimb-app/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/x-icon" href="/src/assets/img/climbico.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>DoClimb</title>
+  
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="DoClimb" />
+    <meta property="og:title" content="DoClimb - 클라이밍 기록 & 암장 정보" />
+    <meta property="og:description" content="클라이밍 기록 관리부터 암장 정보까지 한 번에" />
+    <meta property="og:image" content="https://doclimb.vercel.app/og-image.png" />
+    <meta property="og:url" content="https://doclimb.vercel.app" />
   </head>
   <body>
     <div id="root"></div>
