--- a/doclimb-app/index.html
+++ b/doclimb-app/index.html
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="DoClimb" />
     <meta property="og:title" content="DoClimb - 클라이밍 기록 & 암장 정보" />
     <meta property="og:description" content="클라이밍 기록 관리부터 암장 정보까지 한 번에" />
-    <meta property="og:image" content="https://doclimb.vercel.app/og-image.png" />
+    <meta property="og:image" content="https://doclimb.vercel.app/og-image-v2.png" />
     <meta property="og:url" content="https://doclimb.vercel.app" />
   </head>
   <body>
